force-app/main/default/objects/Case/fields/A_list_of_materials__c.field-meta.xml
<CustomField>
    <fullName>A_list_of_materials__c</fullName>
    <inlineHelpText>A list of materials</inlineHelpText>
    <label>A list of materials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>