force-app/main/default/objects/Case/fields/Account_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Order_Number__c</fullName>
    <label>Order #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>