force-app/main/default/objects/Case/fields/Are_there_any_original_pieces_from_anoth__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_original_pieces_from_anoth__c</fullName>
    <inlineHelpText>Are there any original pieces from another artist, patterns used, or other artistic property from another that need to be noted?</inlineHelpText>
    <label>Are there any original pieces from anoth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>