force-app/main/default/objects/Case/fields/Can_we_help_you_with__c.field-meta.xml
<CustomField>
    <fullName>Can_we_help_you_with__c</fullName>
    <label>Can we help you with?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Related</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Order Correction</fullName>
            </value>
            <value>
                <fullName>Where is my order?</fullName>
            </value>
            <value>
                <fullName>Login Questions</fullName>
            </value>
            <value>
                <fullName>Invoice Copy Request</fullName>
            </value>
            <value>
                <fullName>Suggestions For New Product</fullName>
            </value>
            <value>
                <fullName>Comments/Feedback</fullName>
            </value>
            <value>
                <fullName>Shipping Questions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>