force-app/main/default/objects/Case/fields/Case_Age1__c.field-meta.xml
<CustomField>
    <fullName>Case_Age1__c</fullName>
    <formula>IF(  Case_Age__c  &gt; 20, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20),
IF(  Case_Age__c  &gt; 10,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 20, 20),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 20, 20)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <type>Text</type>
</CustomField>