force-app/main/default/objects/Case/fields/Chat_Description__c.field-meta.xml
<CustomField>
    <fullName>Chat_Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>