force-app/main/default/objects/Case/fields/Is_there_any_additional_interesting_info__c.field-meta.xml
<CustomField>
    <fullName>Is_there_any_additional_interesting_info__c</fullName>
    <inlineHelpText>Is there any additional interesting information you would like to share about this design?</inlineHelpText>
    <label>Is there any additional interesting info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>