force-app/main/default/objects/Case/fields/Name_of_piece_being_submitted__c.field-meta.xml
<CustomField>
    <fullName>Name_of_piece_being_submitted__c</fullName>
    <label>Name of piece being submitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>