force-app/main/default/objects/Case/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <inlineHelpText>If yes, identify any purchased patterns or products of another artist? Provide source, artist name, or additional information pertaining to non-original portion of the design.</inlineHelpText>
    <label>References</label>
    <length>255</length>
    <type>Text</type>
</CustomField>