force-app/main/default/objects/Case/fields/rstk__case_socontract__c.field-meta.xml
<CustomField>
    <fullName>rstk__case_socontract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Rootstock Sales Contract applicable to this Case.</inlineHelpText>
    <label>Sales Contract</label>
    <referenceTo>rstk__socontract__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>cases</relationshipName>
    <type>Lookup</type>
</CustomField>