force-app/main/default/objects/Case/fields/rstk__case_sowarr__c.field-meta.xml
<CustomField>
    <fullName>rstk__case_sowarr__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The &quot;warranted&quot; item applicable to this Case, which is a specific Product and it&apos;s serial number.</inlineHelpText>
    <label>Covered Item</label>
    <referenceTo>rstk__sowarr__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>cases</relationshipName>
    <type>Lookup</type>
</CustomField>