force-app/main/default/objects/Case/fields/rstk__EngineeringReqNumber__c.field-meta.xml
<CustomField>
    <fullName>rstk__EngineeringReqNumber__c</fullName>
    <inlineHelpText>The Engineering Requisition Number associated with this Case.</inlineHelpText>
    <label>Engineering Req Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>