force-app/main/default/objects/Case/fields/timeframe__c.field-meta.xml
<CustomField>
    <fullName>timeframe__c</fullName>
    <label>timeframe</label>
    <type>DateTime</type>
</CustomField>