force-app/main/default/objects/Case/fields/Value_of_the_piece_USD__c.field-meta.xml
<CustomField>
    <fullName>Value_of_the_piece_USD__c</fullName>
    <label>Value of the piece (USD $)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>