force-app/main/default/objects/Case/fields/What_Jewlery_Making_Techniques_were_used__c.field-meta.xml
<CustomField>
    <fullName>What_Jewlery_Making_Techniques_were_used__c</fullName>
    <inlineHelpText>What Jewlery Making Techniques were used that you would like noted?</inlineHelpText>
    <label>What Jewlery Making Techniques were used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>