force-app/main/default/objects/Case/fields/What_was_the_inspiration_for_your_design__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_inspiration_for_your_design__c</fullName>
    <inlineHelpText>What was the inspiration for your design?</inlineHelpText>
    <label>What was the inspiration for your design</label>
    <length>255</length>
    <type>Text</type>
</CustomField>