force-app/main/default/objects/Case/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>year</label>
    <length>18</length>
    <type>Text</type>
</CustomField>