force-app/main/default/objects/Case/validationRules/rstk__socontract_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>rstk__socontract_validation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK( rstk__case_socontract__c ) &amp;&amp;  (
rstk__case_socontract__r.rstk__socontract_active__c = false ||  rstk__case_socontract__r.rstk__socontract_cancelled__c = true)</errorConditionFormula>
    <errorMessage>Sales Contract must be active and not cancelled</errorMessage>
</ValidationRule>