force-app/main/default/objects/Case/listViews/Contest_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Contest_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Contest Queue</label>
    <queue>Contest_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>