force-app/main/default/objects/Case/listViews/Email2Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Email2Case_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Email2Case Queue</label>
    <queue>Email2Case_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>