force-app/main/default/objects/Case/listViews/Web2Case_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Web2Case_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Web2Case Queue</label>
    <queue>Web2Case_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>